unpackaged/main/default/objects/Program/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>