unpackaged/main/default/objects/Program/fields/Associate_Director_Area__c.field-meta.xml
<CustomField>
    <fullName>Associate_Director_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associate Director Area</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>