unpackaged/main/default/objects/Program/fields/Concierge__c.field-meta.xml
<CustomField>
    <fullName>Concierge__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this is a concierge trip</inlineHelpText>
    <label>Concierge</label>
    <type>Checkbox</type>
</CustomField>