unpackaged/main/default/objects/Program/fields/Current_Year_s_GJF_Trip__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_s_GJF_Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current Year&#39;s GJF Trip. &#39;Accepted&#39; Engagement Members will automatically have a new Engagement Member record and associated to the &#39;Current Year&#39;s GJF Trip&#39; Engagement record.</description>
    <label>Current Year&#39;s GJF Trip</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>