unpackaged/main/default/objects/Program/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPR (233)</fullName>
            </value>
            <value>
                <fullName>DAF (223)</fullName>
            </value>
            <value>
                <fullName>Disaster (313)</fullName>
            </value>
            <value>
                <fullName>IOPS (213)</fullName>
            </value>
            <value>
                <fullName>LWCJ (243)</fullName>
            </value>
            <value>
                <fullName>President (100)</fullName>
            </value>
            <value>
                <fullName>SHR (253)</fullName>
            </value>
            <value>
                <fullName>SLRE (513)</fullName>
            </value>
            <value>
                <fullName>VP for Programs (200)</fullName>
            </value>
            <value>
                <fullName>Pre-2015 Grant Record (600)</fullName>
            </value>
            <value>
                <fullName>Fiscal Sponsorship (999)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>