unpackaged/main/default/objects/Program/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <formula>MID( TEXT(  Department__c ) ,FIND(&quot;(&quot;,TEXT( Department__c ),1)+1,LEN(TEXT( Department__c ))-FIND(&quot;(&quot;,TEXT( Department__c ),1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Code</label>
    <type>Text</type>
</CustomField>