unpackaged/main/default/objects/Program/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <formula>LEFT(TEXT(  Department__c  ),FIND(&quot;(&quot;,TEXT( Department__c ),1)-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Name</label>
    <type>Text</type>
</CustomField>