unpackaged/main/default/objects/Program/fields/Engagement_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Engagement Legacy ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>