unpackaged/main/default/objects/Program/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event/Seminar</fullName>
            </value>
            <value>
                <fullName>GJF Application</fullName>
            </value>
            <value>
                <fullName>GJF Registration</fullName>
            </value>
            <value>
                <fullName>Meeting Group</fullName>
            </value>
            <value>
                <fullName>Outreach/Engagement</fullName>
            </value>
            <value>
                <fullName>Service Program</fullName>
            </value>
            <value>
                <fullName>Study Tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>