unpackaged/main/default/objects/Program/fields/GIFTS_ID__c.field-meta.xml
<CustomField>
    <fullName>GIFTS_ID__c</fullName>
    <label>GIFTS ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>