unpackaged/main/default/objects/Program/fields/GJF_Trip_Year__c.field-meta.xml
<CustomField>
    <fullName>GJF_Trip_Year__c</fullName>
    <label>GJF Trip Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>