unpackaged/main/default/objects/Program/fields/Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Name_ID__c</fullName>
    <externalId>true</externalId>
    <label>Name ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>