unpackaged/main/default/objects/Program/fields/Program_Director_Area__c.field-meta.xml
<CustomField>
    <fullName>Program_Director_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Director Area</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>