unpackaged/main/default/objects/Program/fields/Trip_Location__c.field-meta.xml
<CustomField>
    <fullName>Trip_Location__c</fullName>
    <label>Trip Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
            <value>
                <fullName>Dominican Republic</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Ethiopia</fullName>
            </value>
            <value>
                <fullName>Gambia</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Guyana</fullName>
            </value>
            <value>
                <fullName>Haiti</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Kazakhstan</fullName>
            </value>
            <value>
                <fullName>Kenya</fullName>
            </value>
            <value>
                <fullName>Kosovo</fullName>
            </value>
            <value>
                <fullName>Malawi</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Namibia</fullName>
            </value>
            <value>
                <fullName>Nepal</fullName>
            </value>
            <value>
                <fullName>Nicaragua</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>Rwanda</fullName>
            </value>
            <value>
                <fullName>Senegal</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Sri Lanka</fullName>
            </value>
            <value>
                <fullName>Tanzania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>