unpackaged/main/default/objects/Program/fields/Trip_Year__c.field-meta.xml
<CustomField>
    <fullName>Trip_Year__c</fullName>
    <label>Trip Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>